@@ -45,6 +45,8 @@
 
 	fix in summary(svyivreg) for variances (Chandler McClellan)
 
+	svyolr() didn't run for subsets of raked/calibrated designs (Antony Damico)
+
 4.1-1	CRAN
 
 4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
